--- a/ajax.html
+++ b/ajax.html
@@ -13,7 +13,7 @@
       <a href="">Bloc</a>
       <a href="">Contacto</a>
     </div>
-    <div id="logo"></div>
+    <div id="logos"></div>
   </header>
   <body>
     <div id="sect" class="sect">
